Fix embedder schema and database operations
- Fix schema initialization order: move embedder table definition before its trigger
- Add proper casting for PostgreSQL custom enum types in JDBC operations
- Remove deploymentContext field that was causing compilation issues
- Fix tests to match the new schema structure

🤖 Generated with [Claude Code](https://claude.ai/code)

Co-Authored-By: Claude <noreply@anthropic.com>